# mlops

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LEARNING.md  MEMORY.md  MODEL_CARD.md  PLAN.md  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml  drift-report.yml  eks-demo.yml  eks-failsafe.yml  evidence-pages.yml  train-deploy.yml
deploy/grafana/dashboards/: quickdraw-api.json
deploy/helm/quickdraw-api/: .helmignore  Chart.yaml  values.yaml
deploy/helm/quickdraw-api/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml  servicemonitor.yaml
deploy/k6/: predict.js
deploy/prometheus/: values.yaml
infra/ephemeral/: README.md  backend.tf  eks.tf  outputs.tf  providers.tf  variables.tf  versions.tf  vpc.tf
infra/persistent/: README.md  backend.tf  ecr.tf  iam.tf  lambda.tf  outputs.tf  providers.tf  s3.tf  variables.tf  versions.tf
reports/eval/: metrics.json
scripts/: capture_prometheus_metrics.py  eks_sweep.py  mlflow_sync.sh
src/quickdraw/: __init__.py  config.py
src/quickdraw/data/: __init__.py  download.py  preprocess.py  validate.py
src/quickdraw/evidence/: export.py
src/quickdraw/evidence/templates/: index.html.j2  style.css
src/quickdraw/monitoring/: __init__.py  alert.py  drift.py  feedback.py  reference.py  schema.py
src/quickdraw/serving/: __init__.py  app.py  capture_log.py  feedback_log.py  prediction_log.py  predictor.py
src/quickdraw/training/: __init__.py  augment.py  evaluate.py  export_onnx.py  gate.py  model.py  registry.py  train.py
tests/: conftest.py  test_capture_prometheus_metrics.py  test_config.py  test_data_download.py  test_data_preprocess.py  test_dvc_pipeline.py  test_eks_sweep.py  test_evidence_export.py  test_export_onnx.py  test_monitoring_alert.py  test_monitoring_drift.py  test_monitoring_feedback.py  test_monitoring_reference.py  test_package.py  test_serving_app.py  test_serving_capture.py  test_serving_feedback.py  test_serving_prediction_log.py  test_serving_predictor.py  test_training_augment.py  test_training_evaluate.py  test_training_gate.py  test_training_model.py  test_training_registry.py  test_training_train.py  test_validate.py
