[project]
name = "quickdraw"
version = "0.1.0"
description = "End-to-end MLOps platform for live sketch recognition on Google QuickDraw"
readme = "README.md"
license = "MIT"
authors = [{ name = "Monish Kamwal" }]
requires-python = ">=3.12,<3.13"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.3",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quickdraw"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
