[project]
name = "quickdraw"
version = "0.1.0"
description = "End-to-end MLOps platform for live sketch recognition on Google QuickDraw"
readme = "README.md"
license = "MIT"
authors = [{ name = "Monish Kamwal" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "numpy>=2.1",
    "onnxruntime>=1.20",
    "pillow>=11.0",
    "prometheus-fastapi-instrumentator>=7.0",
    "pyyaml>=6.0",
    "uvicorn>=0.32",
]

[dependency-groups]
dev = [
    "httpx>=0.28",  # fastapi.testclient's transport
    "pre-commit>=4.0",
    "pytest>=8.3",
    "ruff>=0.11",
]
# Training-only stack, kept out of [project.dependencies] so the serving image
# installs the runtime deps without torch/MLflow (Dockerfile: --no-default-groups).
train = [
    "matplotlib>=3.9",
    "mlflow>=2.18",
    "onnx>=1.17",
    "onnxscript>=0.2",  # required by torch>=2.9's default (dynamo) ONNX exporter
    "torch>=2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quickdraw"]

# `uv sync` (and CI's `uv sync --locked`) installs dev + train by default; torch is
# pinned to PyTorch's CPU wheel index — the default Linux wheel drags in ~2.5 GB of
# CUDA libraries that a laptop/CI/Lambda project never uses.
[tool.uv]
default-groups = ["dev", "train"]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
